--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Serendipity Menus</title>
+  <title>Nura Menus</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 2rem 1rem;
-      background: #f5f5f5;
+      background: #725E30;
       color: #222;
       display: flex;
       flex-direction: column;
@@ -24,10 +24,11 @@
     .section {
       width: 100%;
       max-width: 400px;
-      background: white;
+      background: #867244;
       padding: 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 0rem;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0);
       margin-bottom: 2rem;
     }
     .section h2 {
@@ -40,10 +41,10 @@
       padding: 0.8rem;
       margin-bottom: 1rem;
       text-align: center;
-      background: #2c7a7b;
+      background: #f5f5f5;
       color: white;
       text-decoration: none;
-      border-radius: 0.5rem;
+      border-radius: 0rem;
       font-weight: 600;
       transition: background 0.2s;
     }
@@ -53,16 +54,16 @@
   </style>
 </head>
 <body>
-  <h1>Serendipity Menus</h1>
+  <h1>Nura Menus</h1>
 
   <div class="section">
-    <h2>🌿 Garden Menu</h2>
-    <a class="btn" href="https://drive.google.com/file/d/1uBKF9ahKtaPtoHTim9_gnU8W6Rf6Z7be/view" target="_blank">Garden - Italian</a>
-    <a class="btn" href="https://drive.google.com/file/d/1WQ9-i71QBtZgQU8InaNECPWp-CWHrPFN/view" target="_blank">Garden - English</a>
+    <h2>🌿 Menu Garden</h2>
+    <a class="btn" href="pdf/garden-it.pdf" target="_blank">Menu Garden - IT</a>
+    <a class="btn" href="pdf/garden-en.pdf" target="_blank">Menu Garden - EN</a>
   </div>
 
   <div class="section">
-    <h2>🍽️ Bistro Menu</h2>
+    <h2>🍽️ Menu Bistro</h2>
     <a class="btn" href="#" target="_blank">Bistro - Italian (Coming soon)</a>
     <a class="btn" href="#" target="_blank">Bistro - English (Coming soon)</a>
   </div>
